change RoleID to String